--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuie8d2ZmRNXqoaPIPpgpKk7NyrRFuc2EpSQ&usqp=CAU">
                 </span>
                 <p>
-                    These blubbery behemoths come in two varies: Tusk-obvious and Tusk-elusive (shown above). Male
+                    These blubbery behemoths come in two varieties: Tusk-obvious and Tusk-elusive (shown above). Male
                     Walruses sport an impressive weapon of dental destruction,<br>
                     much like the <a
                         href="https://i.pinimg.com/originals/a1/ad/f1/a1adf1c4403ed6d93dbfada916463ba7.png">African
@@ -46,8 +46,9 @@
                 <h3>More about this Gentle (and not so gentle) earthly co-habitant</h3>
                 <span></span>
                 <p>
-                    Here's something you probly didn't know about this oceanic blub-ub-ub. In addition to looking like
-                    whole county is out of moisturizer and their the ones who need it most.<br>
+                    Here's something you probably didn't know about this oceanic blub-ub-ub. In addition to looking like
+                    the
+                    whole country is out of moisturizer and they're the ones who need it most.<br>
                     Walruses also have a rounded fusiform body. There's a word for you <a
                         href="https://www.dictionary.com/browse/fusiform"></a><em>fusiform</em>. Go ahead and look it
                     up, I'll wait.
@@ -95,9 +96,6 @@
 
                 </p>
 
-                walrus <img
-                    src="https://www.google.com/imgres?imgurl=http%3A%2F%2Fwww.inparkmagazine.com%2Fwp-content%2Fuploads%2F2020%2F12%2FSFDK_Walruses1-scaled.jpg&imgrefurl=http%3A%2F%2Fwww.inparkmagazine.com%2Fsfdk-walruses%2F&tbnid=mmLQuBaAqoz31M&vet=12ahUKEwixl-CkysfvAhXNIDQIHYPPCmgQMygKegUIARDDAQ..i&docid=3sMqEthbb0BCyM&w=2560&h=1440&q=walrus%20companionship&client=firefox-b-1-d&ved=2ahUKEwixl-CkysfvAhXNIDQIHYPPCmgQMygKegUIARDDAQ"
-                    alt="">
 
 
                 walrus </img
@@ -105,14 +103,6 @@
 
                 walrus lookalikes/ close relatives <img
                     src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.dogclub.co.uk%2Fwp-content%2Fuploads%2F2020%2F01%2Fword-image.png&imgrefurl=https%3A%2F%2Fdogclub.co.uk%2Fwalrus-dog-breed-everything-you-need-to-know-about-them%2F&tbnid=3AMK89mDbetjmM&vet=10CAwQMyhtahcKEwjA_bqlysfvAhUAAAAAHQAAAAAQCQ..i&docid=fPwxlJRHFcbN6M&w=1280&h=853&q=walrus%20companionship&client=firefox-b-1-d&ved=0CAwQMyhtahcKEwjA_bqlysfvAhUAAAAAHQAAAAAQCQ">
-
-                Jamie
-                <img
-                    src="https://static01.nyt.com/images/2012/10/10/nyregion/WALRUS1/WALRUS1-articleLarge.jpg?quality=75&auto=webp&disable=upscale">
-
-
-                <img
-                    src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.pinimg.com%2F736x%2F54%2F56%2F8d%2F54568dd06920eb0c1d8ba900ac8869ee.jpg&imgrefurl=https%3A%2F%2Fwww.pinterest.de%2Fpin%2F693202567623360802%2F%3Famp_client_id%3DCLIENT_ID(_)%26mweb_unauth_id%3D%26from_amp_pin_page%3Dtrue&tbnid=wWtg7wrnubwT3M&vet=10CFAQMyjyAWoXChMIwP26pcrH7wIVAAAAAB0AAAAAEBY..i&docid=nMnIrgmOAQdd7M&w=729&h=486&itg=1&q=walrus%20companionship&client=firefox-b-1-d&ved=0CFAQMyjyAWoXChMIwP26pcrH7wIVAAAAAB0AAAAAEBY">
 
 
 
@@ -128,7 +118,7 @@
                 <p>
                     Do you have what it takes to be an aquarian majestic?<br>
                     <span></span>
-                    Have you always wanted to teeth large enough to impale your foes?<br>
+                    Have you always wanted teeth large enough to impale your foes?<br>
                     <span></span>
                     Ever answer a survey with 'yeah, I <strong><em>could</em></strong> live on nothing but sushi for the
                     rest of my life.'
@@ -150,30 +140,19 @@
             </section>
 
             <button id='begin'>Find Out if you're Tusk Enough</button><br>
+
             <button id='retake'>But I REALLY Want to be a Walrus.<br>
                 Ok, Take the Quiz Again</button>
+
+            <span id="test-results"></span>
 
         </div>
 
     </main>
 </body>
-<script type="module" src="app.js"></script>
+<script type="module" src="./app.js"></script>
 
 </html>
-
-
-
-
-
-
-
-
-
-Otter
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqcPZ0AddLhtrT0NJta45rJUVfrGQdTNMirg&usqp=CAU">
-
-
-<p>Compare</p>
 
 
 
